right aligning banner text, nav, stop animation butotn

--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -87,6 +87,7 @@
         display: inline-block;
         font-size: 1.2rem;
         padding: 0;
+        text-align: right; // right side of nav aligns with banner
         width: 45%;
       }
     }
